[package]
name = "tracefp"
description = "A stack backtracking library based on frame-pointer."
authors = ["Yexiang Zhang <mornyx.z@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
libc = "0.2"

[dev-dependencies]
nix = "0.24"
backtrace = "0.3"

[features]
default = ["memory-access-check"]
memory-access-check = []
